-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.2
-
-
13c0fb137d (qt/qtbase/dev) 13c0fb137d (qt/tqtc-qtbase/dev) 9fa052aab3 (qt/qtbase/6.3) 9fa052aab3 (qt/tqtc-qtbase/6.3)
This was a problem back in QTBUG-45559 and seems to have broken again after https://codereview.qt-project.org/c/qt/qtbase/+/324352
The resulting image seems to be wrapped with 3 pixels and some extra rgb pixels in the lower left corner:
Repro:
- Build attached example.
- Use the windows snipping tool to snip a part of for example the Qt logo.
- Paste in the example app.
- duplicates
-
QTBUG-98786 QMimeData: wrong image pasted from clipboard
-
- Closed
-
- is duplicated by
-
QTBUG-104872 Calling QClipboard::image() corrupts image inside Win 11 clipboard memory (from Windows Snipping Tool)
-
- Closed
-
-
QTBUG-105319 Saving a picture from a clipboard using QImage::save corrupt the picture
-
- Closed
-